--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ google-auth>=1.35.0
 google-auth-oauthlib>=0.4.6
 google-api-python-client>=2.38.0
 requests>=2.26.0
-openai>=0.10.0
+urllib3>=1.26.0
+openai>=1.0.0
